--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,13 @@
 <distributionManagement>
     <repository>
         <id>central</id>
-        <name>pavan-releases</name>
-        <url>http://192.168.1.2:8081/artifactory/superman</url>
+        <name>devops-releases</name>
+        <url>http://localhost:8081/artifactory/superman</url>
     </repository>
     <snapshotRepository>
         <id>snapshots</id>
-        <name>pavan-snapshots</name>
-        <url>http://192.168.1.2:8081/artifactory/superman</url>
+        <name>devops-snapshots</name>
+        <url>http://localhost:8081/artifactory/superman</url>
     </snapshotRepository>
 </distributionManagement>
 
